# sequencer_client

./: .gitignore  Cargo.toml  LICENSE  MIGRATION_TO_FASTWEBSOCKETS.md  README.md
crates/sequencer_client/: Cargo.toml
crates/sequencer_client/docs/: crate.md
crates/sequencer_client/src/: lib.rs  main.rs  reader.rs
crates/sequencer_reader/: Cargo.toml
crates/sequencer_reader/src/: connection.rs  lib.rs  main.rs  types.rs
crates/types/consensus/: Cargo.toml
crates/types/consensus/src/interfaces/: ArbosActs.sol
crates/types/consensus/src/transactions/: batchpostingreport.rs  deposit.rs  internal.rs  mod.rs  retryable.rs  submit_retryable.rs  typed.rs  util.rs
crates/types/network/: Cargo.toml
crates/types/network/src/sequencer/: feed.rs
docs/: crate.md
src/: lib.rs  main.rs  main2.rs  reader.rs
src/types/: mod.rs
src/types/consensus/transactions/: deposit.rs  mod.rs  submit_retryable.rs  typed.rs
src/types/messages/: batchpostingreport.rs  mod.rs
src/types/network/: mod.rs
src/types/transactions/: deposit.rs  mod.rs  submit_retryable.rs  unsigned.rs  util.rs
