[package]
name = "sequencer_client"
version = "0.2.4"
edition = "2024"
license-file = "LICENSE"
description = "A library for reading the Arbitrum Sequencer feed."
repository = "https://github.com/nuntax/sequencer_client"
homepage = "https://github.com/nuntax/sequencer_client"
authors = ["nuntax"]
readme = "README.md"
keywords = ["web3"]
[dependencies]
alloy = { version = "1.0.23", features = [
    "consensus",
    "k256",
    "eips",
    "serde",
], default-features = false }
alloy-primitives = "1.2.0"
alloy-rlp = "0.3.12"
base64 = "0.22.1"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full", "io-util"] }

tokio-tungstenite = { version = "0", features = ["rustls-tls-native-roots"] }
url = "2.5.4"
rustls = "0.23.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-stream = "0.3.6"
fastwebsockets = "0.10.0"
alloy-consensus = "1.0.24"
eyre = "0.6.12"
