[workspace]
members = ["./crates/types/network", "./crates/types/consensus", "./crates/sequencer_client"]
resolver = "3"

[workspace.dependencies]
arb-alloy-consensus = { version = "0.5.0", path = "./crates/types/consensus" }
arb-alloy-network = { version = "0.5.0", path = "./crates/types/network" }

[workspace.metadata.release]
# Publish crates in dependency order
publish = true
tag-name = "v{{version}}"
