[package]
name = "sequencer_client"
version = "0.5.0"
edition = "2024"
license-file = "../../LICENSE"
description = "A library for reading the Arbitrum Sequencer feed."
repository = "https://github.com/nuntax/sequencer_client"
homepage = "https://github.com/nuntax/sequencer_client"
authors = ["nuntax"]
readme = "../../README.md"
keywords = ["web3"]
[dependencies]
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-primitives.workspace = true
base64 = "0.22.1"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.4.0"
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full", "io-util"] }
tokio-tungstenite = { version = "0", features = ["rustls-tls-native-roots"] }
url = "2.5.8"
rustls = "0.23.36"
tracing.workspace = true
tracing-subscriber = "0.3.19"
async-stream = "0.3.6"
eyre = "0.6.12"
color-eyre = "0.6.5"
bytes.workspace = true
tokio-stream = "0.1.8"
arb-sequencer-consensus.workspace = true
arb-sequencer-network.workspace = true
