[package]
name = "arb-alloy-network"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Network-layer types for the Arbitrum sequencer feed protocol"
repository = "https://github.com/nuntax/sequencer_client"
homepage = "https://github.com/nuntax/sequencer_client"
[lib]
path = "src/lib.rs"
[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
bytes.workspace = true
serde.workspace = true
alloy-core = { workspace = true, features = ["sol-types"] }
alloy-contract.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
